@@ -1,5 +1,9 @@
 File Name: CHANGES
 
+02/12/2021 FASP 2.6.3:
+- Remove BLAS from CMake;
+- Make CMake work on Windows + VSCode + CMake.
+
 02/10/2021 FASP 2.6.2:
 - Update output information for UA AMG setup;
 - Add decoup_type for choosing decoupling methods in BSR;
